--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ body{
 .msg-container{
     height: 100vmin;
     display:flex;
-    flex-wrap:wrap;
+    /*flex-wrap:wrap;*/
     justify-content: center;
     align-items: center;
     flex-direction: column;
